--- a/public/index.html
+++ b/public/index.html
@@ -2,42 +2,73 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="msapplication-TileColor" content="#0079BD" />
+    <meta name="theme-color" content="#0079BD" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="author" content="Muhamad Husein" />
+    <meta name="description" content="Team users app" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/media/logo/logo192.png" />
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <title>Team Users</title>
+    <style>
+      body{margin:0;padding:0}.splash-screen{cursor:wait;position:fixed;inset:0;z-index:1021;width:100%;height:100%;display:flex;align-items:center;justify-content:center;flex-direction:column;background-color:#fff}.splash-spinner{animation:rotateSpin 2s linear infinite;width:50px;height:50px}.splash-spinner circle{stroke:#3699FF;stroke-linecap:round;animation:dashSpin 1.5s ease-in-out infinite}@keyframes rotateSpin{100%{transform:rotate(360deg)}}@keyframes dashSpin{0%{stroke-dasharray:1,150;stroke-dashoffset:0}50%{stroke-dasharray:90,150;stroke-dashoffset:-35}100%{stroke-dasharray:90,150;stroke-dashoffset:-124}}
+    </style>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>
+      <style>
+      #splashScreen {
+        display: none
+      }
+      .nojs {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        height: 100vh;
+        font-family: sans-serif;
+        background-color: #E1E9FF
+      }
+      .nojs::before {
+        font-size: 1.5rem;
+        display: block
+      }
+      [lang=id] .nojs::before {
+        content: "Anda harus mengaktifkan JavaScript untuk menjalankan aplikasi ini."
+      }
+      [lang=en] .nojs::before {
+        content: "You need to enable JavaScript to run this app."
+      }
+      .nojs::after {
+        display: block;
+        margin: 9px 0
+      }
+      [lang=id] .nojs::after {
+        content: "Harap aktifkan JavaScript di pengaturan browser Anda."
+      }
+      [lang=en] .nojs::after {
+        content: "Please enable JavaScript in your browser setting."
+      }
+      .nojs a {
+        display: inline-block;
+        order: 3;
+        font-weight: 700
+      }
+      </style>
+      <div class="nojs">
+        <a href="https://www.enablejavascript.io/" data-nosnippet="true" target="_blank" rel="noopener noreferrer nofollow" tabindex="-1">GUIDE</a>
+      </div>
+    </noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <div id="splashScreen" class="splash-screen">
+      <svg class="splash-spinner" viewBox="0 0 50 50">
+        <circle cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
+      </svg>
+    </div>
   </body>
 </html>
